[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marl-nav"
version = "0.1.0"
description = "Beginner-friendly multi-agent RL navigation research codebase"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "seaborn>=0.13",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "minigrid>=2.3.0",
    "gymnasium>=0.29",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
